# autodaily

./: .gitignore  Readme.md  Release.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/schemas/com.smart.autodaily.data.AppDb/: 1.json  2.json
app/src/androidTest/java/com/smart/autodaily/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/smart/autodaily/: IUserService.aidl
app/src/main/assets/: ch_det.param  ch_rec.param  privacy.html  terms.html
app/src/main/cpp/: CMakeLists.txt  CrnnNet.cpp  CrnnNet.h  DbNet.cpp  DbNet.h  Ocr.cpp  Ocr.h  autodaily.cpp  clipper.cpp  clipper.hpp  common.cpp  common.h  yolo.cpp  yolo.h  yolov8.cpp
app/src/main/java/com/smart/autodaily/: App.kt  LicenseShowActivity.kt  LicensesActivity.kt  MainActivity.kt
app/src/main/java/com/smart/autodaily/api/: ConcatAndNotice.kt  KeyTypeApi.kt  RegisterLoginApi.kt  RemoteApi.kt  RunApi.kt  SearchDownloadApi.kt  UpdateApi.kt  UserKeyApi.kt  UserKeyRecordApi.kt  VirtualCoinApi.kt
app/src/main/java/com/smart/autodaily/base/: BaseViewModel.kt  MyComposeViewLifecycleOwner.kt
app/src/main/java/com/smart/autodaily/command/: Command.kt  CommandExecutor.kt  CommandImpl.kt  RootExecutor.kt  ShellConstants.kt  ShizukuExecutor.kt
app/src/main/java/com/smart/autodaily/config/: AppConfig.kt
app/src/main/java/com/smart/autodaily/constant/: ActionString.kt  AppBarTitle.kt  BorderDirection.kt  Color.kt  ForegroundServiceId.kt  LoginResult.kt  ModelName.kt  PermissionSettingText.kt  RegisterResult.kt  ResponseCode.kt  RunButtonClickResult.kt  Screen.kt  SettingType.kt  Ui.kt  WorkType.kt
app/src/main/res/drawable/: baseline_download_done_24.xml  baseline_downloading_24.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/main/res/xml-v30/: accessibility_service_config.xml
app/src/test/java/com/smart/autodaily/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+201 files in other folders)
